<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="0dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/post_ib"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/empty_str"
                android:maxHeight="100dp"
                android:onClick="takePhoto"
                android:padding="10dp"
                android:src="@drawable/take_photo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:text="@string/label_category"
                    android:textColor="#00b3b3"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/category_spin"
                    style="@style/spinnerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/categories" />

                <EditText
                    android:id="@+id/location_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location_hint"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/descEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_desc"
            android:lines="3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/severityTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/label_serverity"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/severityV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textSize="16sp" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/severitySb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:tag="0dp" />

        <fragment
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            class="com.google.android.gms.maps.SupportMapFragment" />

        <EditText
            android:id="@+id/tagEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_tag" />

        <Button
            android:id="@+id/submitB"
            style="@style/btnStyleGenoa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:onClick="onSubmit"
            android:text="@string/submit" />
    </LinearLayout>

</ScrollView>